// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders text supporting with no additional props 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={1.1428571428571428}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-medium",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 14,
        "lineHeight": 18,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text supporting with variation success 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={1.1428571428571428}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-medium",
      },
      {
        "color": "hsl(107, 64%, 16%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 14,
        "lineHeight": 18,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text supporting with variation success reverseTheme true 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={1.1428571428571428}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-medium",
      },
      {
        "color": "hsl(107, 58%, 33%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 14,
        "lineHeight": 18,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text that is not scaled down with adjustsFontSize false 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  numberOfLines={4}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog
</Text>
`;

exports[`renders text that is scaled down with adjustsFontSize true 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={true}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  numberOfLines={4}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog. The quick brown fox jumped over the lazy dog
</Text>
`;

exports[`renders text with base variation 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with center alignment 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "center",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with error variation 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(6, 64%, 51%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with error variation reverseTheme true 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(6, 64%, 51%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with info variation 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(207, 61%, 34%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with left alignment 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with no additional props 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with right alignment 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "right",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with subdued variation 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(197, 15%, 43%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with success variation 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(107, 64%, 16%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with success variation reverseTheme true 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(107, 58%, 33%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with underline styling 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
      {
        "textDecorationStyle": "dotted",
      },
      {
        "textDecorationColor": "hsl(197, 15%, 43%)",
        "textDecorationLine": "underline",
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders text with warn variation 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(51, 64%, 24%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders with italic styling 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-italic",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
      {
        "fontStyle": "italic",
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`renders with strikethrough styling 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
      {
        "textDecorationLine": "line-through",
      },
    ]
  }
>
  Test Text
</Text>
`;

exports[`supports nested Text children with mixed styles 1`] = `
<Text
  accessibilityRole="text"
  adjustsFontSizeToFit={false}
  allowFontScaling={true}
  collapsable={false}
  maxFontSizeMultiplier={3.125}
  selectable={true}
  selectionColor="hsl(86, 100%, 46%)"
  style={
    [
      {
        "fontFamily": "inter-regular",
      },
      {
        "color": "hsl(198, 35%, 21%)",
      },
      {
        "textAlign": "left",
      },
      {
        "fontSize": 16,
        "lineHeight": 20,
      },
      {
        "letterSpacing": 0,
      },
    ]
  }
>
  Hello 
  <Text
    accessibilityRole="text"
    adjustsFontSizeToFit={false}
    allowFontScaling={true}
    collapsable={false}
    maxFontSizeMultiplier={3.125}
    selectable={true}
    selectionColor="hsl(86, 100%, 46%)"
    style={
      [
        {
          "fontFamily": "inter-semibold",
        },
        {
          "color": "hsl(198, 35%, 21%)",
        },
        {
          "textAlign": "left",
        },
        {
          "fontSize": 16,
          "lineHeight": 20,
        },
        {
          "letterSpacing": 0,
        },
      ]
    }
  >
    World
  </Text>
  !
</Text>
`;
